[feature] - upgrade to jmeter 5.2.1
- update version of jmeter to 5.2.1
- remove unncessary fix for javax.ws in build.gradle
- update missing properties and keywords after upgrade, this includes
  - authorizations with clearEachIteration and useUserConfig
  - cache with useUserConfig
  - cookies with useUserConfig
  - group, after and before with keepUser
  - plan with classpath
  - add files and file keywords to http - handles upload files
  functionality
- change searchPaths setting to look for functions in jmeter libraries
- move some of the factory tests to their packages
- fix cache tests to handle expired and not expired resources
- fix before and after groups delay and delayedStart properties (the
correct one is delay from scheduler and delayedStart is removed)
- update some texts in messages.properties

--- a/src/main/resources/net/simonix/dsl/jmeter/model/definition/messages.properties
+++ b/src/main/resources/net/simonix/dsl/jmeter/model/definition/messages.properties
@@ -25,12 +25,14 @@ plan.property.comments.description=Comments
 plan.property.enabled.title=Enabled
 plan.property.enabled.description=Enabled
 
-plan.property.serialized.title=
-plan.property.serialized.description=
-plan.property.functionalMode.title=
-plan.property.functionalMode.description=
-plan.property.tearDownOnShutdown.title=
-plan.property.tearDownOnShutdown.description=
+plan.property.serialized.title=Serialized
+plan.property.serialized.description=Run user groups consecutively (i.e. one at a time)
+plan.property.functionalMode.title=Functional Mode
+plan.property.functionalMode.description=Functional Test Mode (i.e. save Response Data and Sampler Data)
+plan.property.tearDownOnShutdown.title=Tear down on shutdown
+plan.property.tearDownOnShutdown.description=Run after group after shutdown of main users
+plan.property.classpath.title=Classpath
+plan.property.classpath.description=List of directories or jar files to put on classpath
 
 ## group
 
@@ -45,22 +47,22 @@ group.property.comments.description=Comments
 group.property.enabled.title=Enabled
 group.property.enabled.description=Enabled
 
-group.property.users.title=
-group.property.users.description=
-group.property.rampUp.title=
-group.property.rampUp.description=
-group.property.delayedStart.title=
-group.property.delayedStart.description=
-group.property.scheduler.title=
-group.property.scheduler.description=
-group.property.delay.title=
-group.property.delay.description=
-group.property.duration.title=
-group.property.duration.description=
-group.property.loops.title=
-group.property.loops.description=
-group.property.forever.title=
-group.property.forever.description=
+group.property.users.title=Users
+group.property.users.description=Number of users
+group.property.rampUp.title=Ramp-up
+group.property.rampUp.description=Ramp-up period (seconds)
+group.property.keepUser.title=Keep User
+group.property.keepUser.description=Same user on each iteration
+group.property.scheduler.title=Scheduler
+group.property.scheduler.description=Specify user lifetime
+group.property.delay.title=Delay
+group.property.delay.description=Startup delay for scheduler (seconds)
+group.property.duration.title=Duration
+group.property.duration.description=Duration for scheduler (seconds)
+group.property.loops.title=Loops
+group.property.loops.description=Loop count
+group.property.forever.title=Forever
+group.property.forever.description=Infinite loop
 
 # before
 before.title=setUp User Group
@@ -73,20 +75,22 @@ before.property.comments.description=Comments
 before.property.enabled.title=Enabled
 before.property.enabled.description=Enabled
 
-before.property.users.title=
-before.property.users.description=
-before.property.rampUp.title=
-before.property.rampUp.description=
-before.property.delayedStart.title=
-before.property.delayedStart.description=
-before.property.scheduler.title=
-before.property.scheduler.description=
-before.property.duration.title=
-before.property.duration.description=
-before.property.loops.title=
-before.property.loops.description=
-before.property.forever.title=
-before.property.forever.description=
+before.property.users.title=Users
+before.property.users.description=Number of users
+before.property.rampUp.title=Ramp-up
+before.property.rampUp.description=Ramp-up period (seconds)
+before.property.keepUser.title=Keep User
+before.property.keepUser.description=Same user on each iteration
+before.property.scheduler.title=Scheduler
+before.property.scheduler.description=Specify user lifetime
+before.property.delay.title=Delay
+before.property.delay.description=Startup delay for scheduler (seconds)
+before.property.duration.title=Duration
+before.property.duration.description=Duration for scheduler (seconds)
+before.property.loops.title=Loops
+before.property.loops.description=Loop count
+before.property.forever.title=Forever
+before.property.forever.description=Infinite loop
 
 # after
 after.title=tearDown User Group
@@ -99,20 +103,24 @@ after.property.comments.description=Comments
 after.property.enabled.title=Enabled
 after.property.enabled.description=Enabled
 
-after.property.users.title=
-after.property.users.description=
-after.property.rampUp.title=
-after.property.rampUp.description=
-after.property.delayedStart.title=
-after.property.delayedStart.description=
-after.property.scheduler.title=
-after.property.scheduler.description=
-after.property.duration.title=
-after.property.duration.description=
-after.property.loops.title=
-after.property.loops.description=
-after.property.forever.title=
-after.property.forever.description=
+after.property.users.title=Users
+after.property.users.description=Number of users
+after.property.rampUp.title=Ramp-up
+after.property.rampUp.description=Ramp-up period (seconds)
+after.property.delayedStart.title=Delayed Start
+after.property.delayedStart.description=Delay User creation until needed
+after.property.keepUser.title=Keep User
+after.property.keepUser.description=Same user on each iteration
+after.property.scheduler.title=Scheduler
+after.property.scheduler.description=Specify user lifetime
+after.property.delay.title=Delay
+after.property.delay.description=Startup delay for scheduler (seconds)
+after.property.duration.title=Duration
+after.property.duration.description=Duration for scheduler (seconds)
+after.property.loops.title=Loops
+after.property.loops.description=Loop count
+after.property.forever.title=Forever
+after.property.forever.description=Infinite loop
 
 ## Controllers
 
@@ -563,6 +571,21 @@ params.description=Defines parameters for 'HTTP Request' sampler
 params.property.values.title=
 params.property.values.description=
 
+# file
+file.title=File
+file.description=Defines single file upload for 'HTTP Request' sampler
+
+file.property.file.title=
+file.property.file.description=
+file.property.name.title=
+file.property.name.description=
+file.property.type.title=
+file.property.type.description=
+
+# files
+files.title=Files
+files.description=Defines files upload for 'HTTP Request' sampler
+
 # body
 body.title=Body
 body.description=Defines body for 'HTTP Request' sampler
@@ -625,6 +648,11 @@ authorizations.property.comments.description=Comments
 authorizations.property.enabled.title=Enabled
 authorizations.property.enabled.description=Enabled
 
+authorizations.property.clearEachIteration.title=Clear each iteration
+authorizations.property.clearEachIteration.description=Clear authorization on each iteration.
+authorizations.property.useUserConfig.title=Use user config
+authorizations.property.useUserConfig.description=Use User Group configuration to control clearing
+
 # cache
 cache.title=Cache Manager
 cache.description=Defines 'HTTP Cache Manager' config element
@@ -642,6 +670,8 @@ cache.property.useExpires.title=
 cache.property.useExpires.description=
 cache.property.maxSize.title=
 cache.property.maxSize.description=
+cache.property.useUserConfig.title=
+cache.property.useUserConfig.description=
 
 # cookie
 cookie.title=Cookie
@@ -675,6 +705,8 @@ cookies.property.clearEachIteration.title=
 cookies.property.clearEachIteration.description=
 cookies.property.policy.title=
 cookies.property.policy.description=
+cookies.property.useUserConfig.title=
+cookies.property.useUserConfig.description=
 
 # counter
 counter.title=Counter
