[feature] - add dns cache manager

--- a/src/main/resources/net/simonix/dsl/jmeter/model/definition/messages.properties
+++ b/src/main/resources/net/simonix/dsl/jmeter/model/definition/messages.properties
@@ -653,6 +653,35 @@ authorizations.property.clearEachIteration.description=Clear authorization on ea
 authorizations.property.useUserConfig.title=Use user config
 authorizations.property.useUserConfig.description=Use User Group configuration to control clearing
 
+# host
+host.title=Static Table Host
+host.description=Defines static table host
+
+host.property.name.title=
+host.property.name.description=
+host.property.address.title=
+host.property.address.description=
+
+# dns
+dns.title=DNS Cache Manager
+dns.description=Defines 'DNS Cache Manager' element
+
+dns.property.name.title=Name
+dns.property.name.description=Name
+dns.property.comments.title=Comments
+dns.property.comments.description=Comments
+dns.property.enabled.title=Enabled
+dns.property.enabled.description=Enabled
+
+dns.property.clearEachIteration.title=Clear each iteration
+dns.property.clearEachIteration.description=Clear cache on each iteration.
+dns.property.useSystem.title=Use system resolver
+dns.property.useSystem.description=User system DNS resolver
+dns.property.servers.title=Servers
+dns.property.servers.description=DNS Servers
+dns.property.values.title=Static hosts
+dns.property.values.description=Static Host Table
+
 # cache
 cache.title=Cache Manager
 cache.description=Defines 'HTTP Cache Manager' config element
