[feature] - update different components of the project
- fixing tests

--- a/src/main/resources/net/simonix/dsl/jmeter/model/definition/messages.properties
+++ b/src/main/resources/net/simonix/dsl/jmeter/model/definition/messages.properties
@@ -430,6 +430,8 @@ http.property.embeddedConcurrentDownloads.title=
 http.property.embeddedConcurrentDownloads.description=
 http.property.embeddedResourceUrl.title=
 http.property.embeddedResourceUrl.description=
+http.property.embeddedResourceUrlExclude.title=
+http.property.embeddedResourceUrlExclude.description=
 http.property.ipSource.title=
 http.property.ipSource.description=
 http.property.ipSourceType.title=
@@ -488,6 +490,8 @@ ajp.property.embeddedConcurrentDownloads.title=
 ajp.property.embeddedConcurrentDownloads.description=
 ajp.property.embeddedResourceUrl.title=
 ajp.property.embeddedResourceUrl.description=
+ajp.property.embeddedResourceUrlExclude.title=
+ajp.property.embeddedResourceUrlExclude.description=
 ajp.property.saveAsMD5.title=
 ajp.property.saveAsMD5.description=
 
@@ -927,6 +931,8 @@ defaults.property.embeddedConcurrentDownloads.title=
 defaults.property.embeddedConcurrentDownloads.description=
 defaults.property.embeddedResourceUrl.title=
 defaults.property.embeddedResourceUrl.description=
+defaults.property.embeddedResourceUrlExclude.title=
+defaults.property.embeddedResourceUrlExclude.description=
 defaults.property.ipSource.title=
 defaults.property.ipSource.description=
 defaults.property.ipSourceType.title=
