--- a/src/main/resources/net/simonix/dsl/jmeter/model/definition/messages.properties
+++ b/src/main/resources/net/simonix/dsl/jmeter/model/definition/messages.properties
@@ -418,36 +418,52 @@ http.property.browserCompatibleMultipart.title=
 http.property.browserCompatibleMultipart.description=
 http.property.impl.title=
 http.property.impl.description=
-http.property.connectTimeout.title=
-http.property.connectTimeout.description=
-http.property.responseTimeout.title=
-http.property.responseTimeout.description=
-http.property.downloadEmbeddedResources.title=
-http.property.downloadEmbeddedResources.description=
-http.property.embeddedConcurrent.title=
-http.property.embeddedConcurrent.description=
-http.property.embeddedConcurrentDownloads.title=
-http.property.embeddedConcurrentDownloads.description=
-http.property.embeddedResourceUrl.title=
-http.property.embeddedResourceUrl.description=
-http.property.embeddedResourceUrlExclude.title=
-http.property.embeddedResourceUrlExclude.description=
-http.property.ipSource.title=
-http.property.ipSource.description=
-http.property.ipSourceType.title=
-http.property.ipSourceType.description=
-http.property.proxySchema.title=
-http.property.proxySchema.description=
-http.property.proxyHost.title=
-http.property.proxyHost.description=
-http.property.proxyPort.title=
-http.property.proxyPort.description=
-http.property.proxyUser.title=
-http.property.proxyUser.description=
-http.property.proxyPassword.title=
-http.property.proxyPassword.description=
 http.property.saveAsMD5.title=
 http.property.saveAsMD5.description=
+
+# http_timeout
+http_timeout.title=HTTP Connect
+http_timeout.description=Defines 'HTTP Request' timeout configuration
+
+http_timeout.property.connect.title=
+http_timeout.property.connect.description=
+http_timeout.property.response.title=
+http_timeout.property.response.description=
+
+# http_resources
+http_resources.title=HTTP Resources
+http_resources.description=Defines 'HTTP Request' resources configuration
+
+http_resources.property.parallel.title=
+http_resources.property.parallel.description=
+http_resources.property.urlInclude.title=
+http_resources.property.urlInclude.description=
+http_resources.property.urlExclude.title=
+http_resources.property.urlExclude.description=
+
+# http_source
+http_source.title=HTTP Source
+http_source.description=Defines 'HTTP Request' source configuration
+
+http_source.address.title=
+http_source.address.description=
+http_source.type.title=
+http_source.type.description=
+
+# http_proxy
+http_proxy.title=HTTP Proxy
+http_proxy.description=Defines 'HTTP Request' proxy configuration
+
+http_proxy.property.schema.title=
+http_proxy.property.schema.description=
+http_proxy.property.host.title=
+http_proxy.property.host.description=
+http_proxy.property.port.title=
+http_proxy.property.port.description=
+http_proxy.property.username.title=
+http_proxy.property.username.description=
+http_proxy.property.password.title=
+http_proxy.property.password.description=
 
 # ajp
 ajp.title=AJP Sampler
@@ -482,18 +498,19 @@ ajp.property.multipart.title=
 ajp.property.multipart.description=
 ajp.property.browserCompatibleMultipart.title=
 ajp.property.browserCompatibleMultipart.description=
-ajp.property.downloadEmbeddedResources.title=
-ajp.property.downloadEmbeddedResources.description=
-ajp.property.embeddedConcurrent.title=
-ajp.property.embeddedConcurrent.description=
-ajp.property.embeddedConcurrentDownloads.title=
-ajp.property.embeddedConcurrentDownloads.description=
-ajp.property.embeddedResourceUrl.title=
-ajp.property.embeddedResourceUrl.description=
-ajp.property.embeddedResourceUrlExclude.title=
-ajp.property.embeddedResourceUrlExclude.description=
 ajp.property.saveAsMD5.title=
 ajp.property.saveAsMD5.description=
+
+# ajp_resources
+ajp_resources.title=AJP Sampler
+ajp_resources.description=Defines 'AJP Request' resources configuration
+
+ajp_resources.property.parallel.title=
+ajp_resources.property.parallel.description=
+ajp_resources.property.urlInclude.title=
+ajp_resources.property.urlInclude.description=
+ajp_resources.property.urlExclude.title=
+ajp_resources.property.urlExclude.description=
 
 # debug
 debug.title=Debug Sample
@@ -919,36 +936,52 @@ defaults.property.encoding.title=
 defaults.property.encoding.description=
 defaults.property.impl.title=
 defaults.property.impl.description=
-defaults.property.connectTimeout.title=
-defaults.property.connectTimeout.description=
-defaults.property.responseTimeout.title=
-defaults.property.responseTimeout.description=
-defaults.property.downloadEmbeddedResources.title=
-defaults.property.downloadEmbeddedResources.description=
-defaults.property.embeddedConcurrent.title=
-defaults.property.embeddedConcurrent.description=
-defaults.property.embeddedConcurrentDownloads.title=
-defaults.property.embeddedConcurrentDownloads.description=
-defaults.property.embeddedResourceUrl.title=
-defaults.property.embeddedResourceUrl.description=
-defaults.property.embeddedResourceUrlExclude.title=
-defaults.property.embeddedResourceUrlExclude.description=
-defaults.property.ipSource.title=
-defaults.property.ipSource.description=
-defaults.property.ipSourceType.title=
-defaults.property.ipSourceType.description=
-defaults.property.proxySchema.title=
-defaults.property.proxySchema.description=
-defaults.property.proxyHost.title=
-defaults.property.proxyHost.description=
-defaults.property.proxyPort.title=
-defaults.property.proxyPort.description=
-defaults.property.proxyUser.title=
-defaults.property.proxyUser.description=
-defaults.property.proxyPassword.title=
-defaults.property.proxyPassword.description=
 defaults.property.saveAsMD5.title=
 defaults.property.saveAsMD5.description=
+
+# defaults_timeout
+defaults_timeout.title=HTTP Request Defaults Timeout
+defaults_timeout.description=Defines 'HTTP Request Defaults' timeout configuration
+
+defaults_timeout.property.connect.title=
+defaults_timeout.property.connect.description=
+defaults_timeout.property.response.title=
+defaults_timeout.property.response.description=
+
+# defaults_resources
+defaults_resources.title=HTTP Request Defaults Resources
+defaults_resources.description=Defines 'HTTP Request Defaults' resources configuration
+
+defaults_resources.property.parallel.title=
+defaults_resources.property.parallel.description=
+defaults_resources.property.urlInclude.title=
+defaults_resources.property.urlInclude.description=
+defaults_resources.property.urlExclude.title=
+defaults_resources.property.urlExclude.description=
+
+# defaults_source
+defaults_source.title=HTTP Request Defaults Source
+defaults_source.description=Defines 'HTTP Request Defaults' source configuration
+
+defaults_source.property.address.title=
+defaults_source.property.address.description=
+defaults_source.property.type.title=
+defaults_source.property.type.description=
+
+# defaults_proxy
+defaults_proxy.title=HTTP Request Defaults Proxy
+defaults_proxy.description=Defines 'HTTP Request Defaults' Proxy configuration
+
+defaults_proxy.property.schema.title=
+defaults_proxy.property.schema.description=
+defaults_proxy.property.host.title=
+defaults_proxy.property.host.description=
+defaults_proxy.property.port.title=
+defaults_proxy.property.port.description=
+defaults_proxy.property.username.title=
+defaults_proxy.property.username.description=
+defaults_proxy.property.password.title=
+defaults_proxy.property.password.description=
 
 # header
 header.title=Header
