[feature] - graphql sampler support

--- a/src/main/resources/net/simonix/dsl/jmeter/model/definition/messages.properties
+++ b/src/main/resources/net/simonix/dsl/jmeter/model/definition/messages.properties
@@ -600,6 +600,15 @@ graphql_proxy.property.username.description=
 graphql_proxy.property.password.title=
 graphql_proxy.property.password.description=
 
+# graphql_operation
+graphql_operation.title=GraphQL Operation
+graphql_operation.description=Defines 'GraphQL HTTP Request' operation configuration
+
+graphql_operation.property.file.title=
+graphql_operation.property.file.description=
+graphql_operation.property.inline.title=
+graphql_operation.property.inline.description=
+
 # graphql_execute
 graphql_execute.title=GraphQL Excute
 graphql_execute.description=Defines 'GraphQL HTTP Request' execute configuration
