Feature/graphql support (#41)
* [feature] - graphql sampler support

--- a/src/main/resources/net/simonix/dsl/jmeter/model/definition/messages.properties
+++ b/src/main/resources/net/simonix/dsl/jmeter/model/definition/messages.properties
@@ -530,6 +530,103 @@ debug.property.displayJMeterVariables.description=
 debug.property.displaySystemProperties.title=
 debug.property.displaySystemProperties.description=
 
+
+# graphql
+graphql.title=GraphQL Sampler
+graphql.description=Defines 'GraphQL HTTP Request' sampler
+
+graphql.property.name.title=Name
+graphql.property.name.description=Name
+graphql.property.comments.title=Comments
+graphql.property.comments.description=Comments
+graphql.property.enabled.title=Enabled
+graphql.property.enabled.description=Enabled
+
+graphql.property.method.title=
+graphql.property.method.description=
+graphql.property.protocol.title=
+graphql.property.protocol.description=
+graphql.property.domain.title=
+graphql.property.domain.description=
+graphql.property.port.title=
+graphql.property.port.description=
+graphql.property.path.title=
+graphql.property.path.description=
+graphql.property.encoding.title=
+graphql.property.encoding.description=
+graphql.property.autoRedirects.title=
+graphql.property.autoRedirects.description=
+graphql.property.followRedirects.title=
+graphql.property.followRedirects.description=
+graphql.property.keepAlive.title=
+graphql.property.keepAlive.description=
+graphql.property.operation.title=
+graphql.property.operation.description=
+graphql.property.impl.title=
+graphql.property.impl.description=
+graphql.property.saveAsMD5.title=
+graphql.property.saveAsMD5.description=
+
+# graphql_timeout
+graphql_timeout.title=GraphQL Connect
+graphql_timeout.description=Defines 'GraphQL HTTP Request' timeout configuration
+
+graphql_timeout.property.connect.title=
+graphql_timeout.property.connect.description=
+graphql_timeout.property.response.title=
+graphql_timeout.property.response.description=
+
+# graphql_source
+graphql_source.title=GraphQL Source
+graphql_source.description=Defines 'GraphQL HTTP Request' source configuration
+
+graphql_source.address.title=
+graphql_source.address.description=
+graphql_source.type.title=
+graphql_source.type.description=
+
+# graphql_proxy
+graphql_proxy.title=GraphQL Proxy
+graphql_proxy.description=Defines 'GraphQL HTTP Request' proxy configuration
+
+graphql_proxy.property.schema.title=
+graphql_proxy.property.schema.description=
+graphql_proxy.property.host.title=
+graphql_proxy.property.host.description=
+graphql_proxy.property.port.title=
+graphql_proxy.property.port.description=
+graphql_proxy.property.username.title=
+graphql_proxy.property.username.description=
+graphql_proxy.property.password.title=
+graphql_proxy.property.password.description=
+
+# graphql_operation
+graphql_operation.title=GraphQL Operation
+graphql_operation.description=Defines 'GraphQL HTTP Request' operation configuration
+
+graphql_operation.property.file.title=
+graphql_operation.property.file.description=
+graphql_operation.property.inline.title=
+graphql_operation.property.inline.description=
+
+# graphql_execute
+graphql_execute.title=GraphQL Excute
+graphql_execute.description=Defines 'GraphQL HTTP Request' execute configuration
+
+graphql_execute.property.file.title=
+graphql_execute.property.file.description=
+graphql_execute.property.inline.title=
+graphql_execute.property.inline.description=
+
+# graphql_variables
+graphql_variables.title=GraphQL Variables
+graphql_variables.description=Defines 'GraphQL HTTP Request' variables configuration
+
+graphql_variables.property.file.title=
+graphql_variables.property.file.description=
+graphql_variables.property.inline.title=
+graphql_variables.property.inline.description=
+
 # jsrsampler
 jsrsampler.title=JSR223 Sampler
 jsrsampler.description=Defines 'JSR223' sampler
