[feature] - add more builders for specific samplers and listeners
- separate builders helps to keep same keyword names but use them in different context

--- a/src/main/resources/net/simonix/dsl/jmeter/model/definition/messages.properties
+++ b/src/main/resources/net/simonix/dsl/jmeter/model/definition/messages.properties
@@ -34,6 +34,22 @@ plan.property.tearDownOnShutdown.description=Run after group after shutdown of m
 plan.property.classpath.title=Classpath
 plan.property.classpath.description=List of directories or jar files to put on classpath
 
+# plan_argument
+plan_argument.title=Variable
+plan_argument.description=Defines single user variable in arguments
+
+plan_argument.property.name.title=
+plan_argument.property.name.description=
+plan_argument.property.value.title=
+plan_argument.property.value.description=
+
+# plan_arguments
+plan_arguments.title=Variables
+plan_arguments.description=Defines user variables element inside a test plan
+
+plan_arguments.property.values.title=
+plan_arguments.property.values.description=
+
 ## group
 
 # group
@@ -421,6 +437,52 @@ http.property.impl.description=
 http.property.saveAsMD5.title=
 http.property.saveAsMD5.description=
 
+# http_param
+http_param.title=Param
+http_param.description=Defines single parameter for 'HTTP Request' sampler
+
+http_param.property.name.title=
+http_param.property.name.description=
+http_param.property.value.title=
+http_param.property.value.description=
+http_param.property.encoded.title=
+http_param.property.encoded.description=
+http_param.property.encoding.title=
+http_param.property.encoding.description=
+
+# http_params
+http_params.title=Params
+http_params.description=Defines parameters for 'HTTP Request' sampler
+
+http_params.property.values.title=
+http_params.property.values.description=
+
+# http_file
+http_file.title=File
+http_file.description=Defines single file upload for 'HTTP Request' sampler
+
+http_file.property.file.title=
+http_file.property.file.description=
+http_file.property.name.title=
+http_file.property.name.description=
+http_file.property.type.title=
+http_file.property.type.description=
+
+# http_files
+http_files.title=Files
+http_files.description=Defines files upload for 'HTTP Request' sampler
+
+# http_body
+http_body.title=Body
+http_body.description=Defines body for 'HTTP Request' sampler
+
+http_body.property.file.title=
+http_body.property.file.description=
+http_body.property.inline.title=
+http_body.property.inline.description=
+http_body.property.encoding.title=
+http_body.property.encoding.description=
+
 # http_timeout
 http_timeout.title=HTTP Connect
 http_timeout.description=Defines 'HTTP Request' timeout configuration
@@ -500,6 +562,52 @@ ajp.property.browserCompatibleMultipart.title=
 ajp.property.browserCompatibleMultipart.description=
 ajp.property.saveAsMD5.title=
 ajp.property.saveAsMD5.description=
+
+# ajp_param
+ajp_param.title=Param
+ajp_param.description=Defines single parameter for 'AJP Request' sampler
+
+ajp_param.property.name.title=
+ajp_param.property.name.description=
+ajp_param.property.value.title=
+ajp_param.property.value.description=
+ajp_param.property.encoded.title=
+ajp_param.property.encoded.description=
+ajp_param.property.encoding.title=
+ajp_param.property.encoding.description=
+
+# ajp_params
+ajp_params.title=Params
+ajp_params.description=Defines parameters for 'AJP Request' sampler
+
+ajp_params.property.values.title=
+ajp_params.property.values.description=
+
+# ajp_file
+ajp_file.title=File
+ajp_file.description=Defines single file upload for 'AJP Request' sampler
+
+ajp_file.property.file.title=
+ajp_file.property.file.description=
+ajp_file.property.name.title=
+ajp_file.property.name.description=
+ajp_file.property.type.title=
+ajp_file.property.type.description=
+
+# ajp_files
+ajp_files.title=Files
+ajp_files.description=Defines files upload for 'AJP Request' sampler
+
+# ajp_body
+ajp_body.title=Body
+ajp_body.description=Defines body for 'AJP Request' sampler
+
+ajp_body.property.file.title=
+ajp_body.property.file.description=
+ajp_body.property.inline.title=
+ajp_body.property.inline.description=
+ajp_body.property.encoding.title=
+ajp_body.property.encoding.description=
 
 # ajp_resources
 ajp_resources.title=AJP Sampler
@@ -683,6 +791,18 @@ jdbc_query.property.inline.description=
 jdbc_query.property.file.title=
 jdbc_query.property.file.description=
 
+# jdbc_params
+jdbc_params.title=JDBC Query parameters
+jdbc_params.description=Defines JDBC Query parameters
+
+jdbc_param.title=JDBC Query parameter
+jdbc_param.description=Defines JDBC Query paratemter
+
+jdbc_param.property.value.title=
+jdbc_param.property.value.description=
+jdbc_param.property.type.title=
+jdbc_param.property.type.description=
+
 # jdbc_execute
 jdbc_execute.title=JDBC Execute
 jdbc_execute.description=Defines query properties part of 'JDBC Request' sampler (update and prepared update type)
@@ -753,80 +873,6 @@ flow.property.duration.title=
 flow.property.duration.description=
 
 ## common
-
-# jdbc_params
-jdbc_params.title=JDBC Query parameters
-jdbc_params.description=Defines JDBC Query parameters
-
-jdbc_param.title=JDBC Query parameter
-jdbc_param.description=Defines JDBC Query paratemter
-
-jdbc_param.property.value.title=
-jdbc_param.property.value.description=
-jdbc_param.property.type.title=
-jdbc_param.property.type.description=
-
-# param
-param.title=Param
-param.description=Defines single parameter for 'HTTP Request' sampler
-
-param.property.name.title=
-param.property.name.description=
-param.property.value.title=
-param.property.value.description=
-param.property.encoded.title=
-param.property.encoded.description=
-param.property.encoding.title=
-param.property.encoding.description=
-
-# params
-params.title=Params
-params.description=Defines parameters for 'HTTP Request' sampler
-
-params.property.values.title=
-params.property.values.description=
-
-# file
-file.title=File
-file.description=Defines single file upload for 'HTTP Request' sampler
-
-file.property.file.title=
-file.property.file.description=
-file.property.name.title=
-file.property.name.description=
-file.property.type.title=
-file.property.type.description=
-
-# files
-files.title=Files
-files.description=Defines files upload for 'HTTP Request' sampler
-
-# body
-body.title=Body
-body.description=Defines body for 'HTTP Request' sampler
-
-body.property.file.title=
-body.property.file.description=
-body.property.inline.title=
-body.property.inline.description=
-body.property.encoding.title=
-body.property.encoding.description=
-
-# argument
-argument.title=Variable
-argument.description=Defines single user variable in arguments
-
-argument.property.name.title=
-argument.property.name.description=
-argument.property.value.title=
-argument.property.value.description=
-
-# arguments
-arguments.title=Variables
-arguments.description=Defines user variables element inside a test plan
-
-arguments.property.values.title=
-arguments.property.values.description=
 
 # insert
 insert.title=Insert
@@ -1035,6 +1081,37 @@ defaults.property.impl.title=
 defaults.property.impl.description=
 defaults.property.saveAsMD5.title=
 defaults.property.saveAsMD5.description=
+
+# defaults_param
+defaults_param.title=Param
+defaults_param.description=Defines single parameter for 'HTTP Request Defaults' config
+
+defaults_param.property.name.title=
+defaults_param.property.name.description=
+defaults_param.property.value.title=
+defaults_param.property.value.description=
+defaults_param.property.encoded.title=
+defaults_param.property.encoded.description=
+defaults_param.property.encoding.title=
+defaults_param.property.encoding.description=
+
+# params
+defaults_params.title=Params
+defaults_params.description=Defines parameters for 'HTTP Request Defaults' config
+
+defaults_params.property.values.title=
+defaults_params.property.values.description=
+
+# defaults_body
+defaults_body.title=Body
+defaults_body.description=Defines body for 'HTTP Request Defaults' config
+
+defaults_body.property.file.title=
+defaults_body.property.file.description=
+defaults_body.property.inline.title=
+defaults_body.property.inline.description=
+defaults_body.property.encoding.title=
+defaults_body.property.encoding.description=
 
 # defaults_timeout
 defaults_timeout.title=HTTP Request Defaults Timeout
@@ -1458,6 +1535,22 @@ backend.property.classname.title=
 backend.property.classname.description=
 backend.property.queueSize.title=
 backend.property.queueSize.description=
+
+# backend_argument
+backend_argument.title=Variable
+backend_argument.description=Defines single user variable in arguments
+
+backend_argument.property.name.title=
+backend_argument.property.name.description=
+backend_argument.property.value.title=
+backend_argument.property.value.description=
+
+# arguments
+backend_arguments.title=Variables
+backend_arguments.description=Defines user variables element inside a backend listener
+
+backend_arguments.property.values.title=
+backend_arguments.property.values.description=
 
 # summary
 summary.title=Summary Report
