[feature] - add jmes extractor and assertion
- new test elements
- assert and extract for xpath, jpath, jmes has consistent naming for expression value

--- a/src/main/resources/net/simonix/dsl/jmeter/model/definition/messages.properties
+++ b/src/main/resources/net/simonix/dsl/jmeter/model/definition/messages.properties
@@ -1,5 +1,5 @@
 ###################################
-# Copyright 2020 Szymon Micyk
+# Copyright 2022 Szymon Micyk
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -1729,6 +1729,28 @@ extract_json.property.expressions.description=
 extract_json.property.concatenation.title=
 extract_json.property.concatenation.description=
 
+# extract_jsem
+extract_jmes.title=Json JMES Path Extractor
+extract_jmes.description=Defines 'JSON JMES Extractor' element
+
+extract_jmes.property.name.title=Name
+extract_jmes.property.name.description=Name
+extract_jmes.property.comments.title=Comments
+extract_jmes.property.comments.description=Comments
+extract_jmes.property.enabled.title=Enabled
+extract_jmes.property.enabled.description=Enabled
+
+extract_jmes.property.applyTo.title=
+extract_jmes.property.applyTo.description=
+extract_jmes.property.defaultValue.title=
+extract_jmes.property.defaultValue.description=
+extract_jmes.property.match.title=
+extract_jmes.property.match.description=
+extract_jmes.property.variable.title=
+extract_jmes.property.variable.description=
+extract_jmes.property.expression.title=
+extract_jmes.property.expression.description=
+
 # extract_xpath
 extract_xpath.title=XPath2 Extractor
 extract_xpath.description=Defines 'XPath2 Extractor' element
@@ -1983,6 +2005,30 @@ assert_json.property.expectNull.title=
 assert_json.property.expectNull.description=
 assert_json.property.invert.title=
 assert_json.property.invert.description=
+
+# assert_jmes
+assert_jmes.title=Json JMES Path Assertion
+assert_jmes.description=Defines 'JSON JMES Assertion' element
+
+assert_jmes.property.name.title=Name
+assert_jmes.property.name.description=Name
+assert_jmes.property.comments.title=Comments
+assert_jmes.property.comments.description=Comments
+assert_jmes.property.enabled.title=Enabled
+assert_jmes.property.enabled.description=Enabled
+
+assert_jmes.property.jpath.title=
+assert_jmes.property.jpath.description=
+assert_jmes.property.assertValue.title=
+assert_jmes.property.assertValue.description=
+assert_jmes.property.assertAsRegex.title=
+assert_jmes.property.assertAsRegex.description=
+assert_jmes.property.value.title=
+assert_jmes.property.value.description=
+assert_jmes.property.expectNull.title=
+assert_jmes.property.expectNull.description=
+assert_jmes.property.invert.title=
+assert_jmes.property.invert.description=
 
 # assert_md5hex
 assert_md5hex.title=MD5Hex Assertion
