[feature] - update default values for view keyword
- the view keyword doesn't require file by default
- the view keyword default name is View Result Tree

--- a/src/main/resources/net/simonix/dsl/jmeter/model/definition/messages.properties
+++ b/src/main/resources/net/simonix/dsl/jmeter/model/definition/messages.properties
@@ -1789,7 +1789,7 @@ summary.property.xml.title=
 summary.property.xml.description=
 
 # view
-view.title=View Report
+view.title=View Result Tree
 view.description=Defines 'View Results Tree' element
 view.component=View_Results_Tree
 
