[feature] - add debug postprocessor

--- a/src/main/resources/net/simonix/dsl/jmeter/model/definition/messages.properties
+++ b/src/main/resources/net/simonix/dsl/jmeter/model/definition/messages.properties
@@ -2061,6 +2061,28 @@ jdbc_postprocessor.property.enabled.description=Enabled
 jdbc_postprocessor.property.use.title=Datasource
 jdbc_postprocessor.property.use.description=Datasource
 
+# debug_postprocessor
+
+debug_postprocessor.title=Debug PostProcessor
+debug_postprocessor.description=Defines 'Debug PostProcessor' element
+debug_postprocessor.component=Debug_PostProcessor
+
+debug_postprocessor.property.name.title=Name
+debug_postprocessor.property.name.description=Name
+debug_postprocessor.property.comments.title=Comments
+debug_postprocessor.property.comments.description=Comments
+debug_postprocessor.property.enabled.title=Enabled
+debug_postprocessor.property.enabled.description=Enabled
+
+debug_postprocessor.property.displayJMeterProperties.title=
+debug_postprocessor.property.displayJMeterProperties.description=
+debug_postprocessor.property.displayJMeterVariables.title=
+debug_postprocessor.property.displayJMeterVariables.description=
+debug_postprocessor.property.displaySystemProperties.title=
+debug_postprocessor.property.displaySystemProperties.description=
+debug_postprocessor.property.displaySamplerProperties.title=
+debug_postprocessor.property.displaySamplerProperties.description=
+
 ## preprocessor
 
 # jsrpreprocessor
