[feature] - add java request sampler
- new sampler to execute java_request
- example how to create own java request (with groovy script)

--- a/src/main/resources/net/simonix/dsl/jmeter/model/definition/messages.properties
+++ b/src/main/resources/net/simonix/dsl/jmeter/model/definition/messages.properties
@@ -931,6 +931,39 @@ flow.property.target.description=
 flow.property.duration.title=
 flow.property.duration.description=
 
+# java_request
+java_request.title=Java Request
+java_request.description=Defines 'Java Request' element
+java_request.component=Java_Request
+
+java_request.property.name.title=Name
+java_request.property.name.description=Name
+java_request.property.comments.title=Comments
+java_request.property.comments.description=Comments
+java_request.property.enabled.title=Enabled
+java_request.property.enabled.description=Enabled
+
+java_request.property.classname.title=
+java_request.property.classname.description=
+
+# backend_argument
+java_request_argument.title=Variable
+java_request_argument.description=Defines single user variable in arguments
+java_request_argument.component=
+
+java_request_argument.property.name.title=
+java_request_argument.property.name.description=
+java_request_argument.property.value.title=
+java_request_argument.property.value.description=
+
+# arguments
+java_request_arguments.title=Variables
+java_request_arguments.description=Defines user variables element inside a java_request listener
+java_request_arguments.component=
+
+java_request_arguments.property.values.title=
+java_request_arguments.property.values.description=
+
 ## common
 
 # insert
