[feature] - add open model thread group
- new experimental jmeter thread group - open model thread group
- the keyword for group is schedule

--- a/src/main/resources/net/simonix/dsl/jmeter/model/definition/messages.properties
+++ b/src/main/resources/net/simonix/dsl/jmeter/model/definition/messages.properties
@@ -83,6 +83,8 @@ group.property.loops.title=Loops
 group.property.loops.description=Loop count
 group.property.forever.title=Forever
 group.property.forever.description=Infinite loop
+group.property.onError.title=On Error
+group.property.onError.description=On Error
 
 # before
 before.title=setUp User Group
@@ -112,6 +114,8 @@ before.property.loops.title=Loops
 before.property.loops.description=Loop count
 before.property.forever.title=Forever
 before.property.forever.description=Infinite loop
+before.property.onError.title=On Error
+before.property.onError.description=On Error
 
 # after
 after.title=tearDown User Group
@@ -143,6 +147,29 @@ after.property.loops.title=Loops
 after.property.loops.description=Loop count
 after.property.forever.title=Forever
 after.property.forever.description=Infinite loop
+after.property.onError.title=On Error
+after.property.onError.description=On Error
+
+# schedule
+schedule.title=Open Model User Group
+schedule.description=Defines users group ('Open Model Thread Group') element
+schedule.component=Open_Model_Thread_Group
+
+schedule.property.name.title=Name
+schedule.property.name.description=Name
+schedule.property.comments.title=Comments
+schedule.property.comments.description=Comments
+schedule.property.enabled.title=Enabled
+schedule.property.enabled.description=Enabled
+
+schedule.property.inline.title=Schedule (Inline)
+schedule.property.inline.description=Schedule (Inline)
+schedule.property.file.title=Schedule (File)
+schedule.property.file.description=Schedule (File)
+schedule.property.seed.title=Random Seed
+schedule.property.seed.description=Random Seed
+schedule.property.onError.title=On Error
+schedule.property.onError.description=On Error
 
 ## Controllers
 
