[feature] - update documentation files

--- a/src/main/resources/net/simonix/dsl/jmeter/model/definition/messages.properties
+++ b/src/main/resources/net/simonix/dsl/jmeter/model/definition/messages.properties
@@ -973,7 +973,7 @@ java_request.property.enabled.description=Enabled
 java_request.property.classname.title=
 java_request.property.classname.description=
 
-# backend_argument
+# argument
 java_request_argument.title=Variable
 java_request_argument.description=Defines single user variable in arguments
 java_request_argument.component=
