[feature] - add support to include raw jmx file content to the script
- feature gives possibility to add jmx to the groovy file - it gives a way to include features which are not yet available groovy-jmeter or to add plugins

--- a/src/main/resources/net/simonix/dsl/jmeter/model/definition/messages.properties
+++ b/src/main/resources/net/simonix/dsl/jmeter/model/definition/messages.properties
@@ -251,6 +251,23 @@ include.property.enabled.description=Enabled
 include.property.file.title=
 include.property.file.description=
 
+# include
+include_raw.title=Include Raw Controller
+include_raw.description=Defines 'Include' controller
+include_raw.component=NA
+
+include_raw.property.name.title=Name
+include_raw.property.name.description=Name
+include_raw.property.comments.title=Comments
+include_raw.property.comments.description=Comments
+include_raw.property.enabled.title=Enabled
+include_raw.property.enabled.description=Enabled
+
+include_raw.property.file.title=
+include_raw.property.file.description=
+include_raw.property.inline.title=
+include_raw.property.inline.description=
+
 # for_each
 for_each.title=ForEach Controller
 for_each.description=Defines 'ForEach' controller
